# AIChatBot

./: .env.example  .gitignore  CONCEPTS.md  Dockerfile  NODE_BACKEND.md  PROJECT_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
ai/providers/: __init__.py  base.py  gemini_provider.py  llama_provider.py  openai_provider.py
ai/rag/: loaders.py  pipeline.py  vectorstore.py  web_search.py
backend/: config.py  database.py  main.py
backend/models/: chat.py  document.py  session.py
backend/routes/: chat.py  documents.py  sessions.py
backend/services/: sse.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  DocumentUploader.jsx  MessageItem.jsx  MessageList.jsx  ProviderSelector.jsx  Sidebar.jsx
frontend/src/hooks/: useChat.js
frontend/src/services/: chatApi.js  documentsApi.js  providersApi.js
server/: .env.example  database.js  index.js  package-lock.json  package.json
server/ai/providers/: gemini.js  index.js  llama.js  openai.js
server/ai/rag/: loaders.js  webSearch.js
server/routes/: chat.js  documents.js  sessions.js
server/src/: index.js
server/src/ai/rag/: loaders.js  pipeline.js  vectorstore.js  webSearch.js
server/src/config/: database.js  index.js
server/src/controllers/: chat.js  documents.js  session.js
server/src/middlewares/: errorHandler.js  notFound.js
server/src/models/: Session.js
server/src/routes/: chat.js  documents.js  sessions.js
server/src/services/: session.js
